--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>Пробная страница!</title>
 </head>
 <body>
+    <h1>Nickita</h>
     <h1>Hello World!</h1><br>
     <h2>2</h2>
     <h3>3</h3>
